--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.datasource.username=root
 spring.datasource.password=wjdqhqhdks
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.web.resources.cache.period=0
-spring.servlet.multipart.max-file-size=1000MB
-spring.servlet.multipart.max-request-size=1000MB
+spring.servlet.multipart.max-file-size=30000MB
+spring.servlet.multipart.max-request-size=30000MB
