--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=ict-cloud-spring
-server.port=8888
+server.port=443
 spring.mvc.view.prefix=/WEB-INF/
 spring.mvc.view.suffix=.jsp
 spring.datasource.url=jdbc:mysql://34.64.113.120:3306/ICT_CLOUD?serverTimezone=Asia/Seoul
@@ -9,3 +9,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.web.resources.cache.period=0
 spring.servlet.multipart.max-file-size=30000MB
 spring.servlet.multipart.max-request-size=30000MB
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=wjdqhqhdks
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=your_alias
