중간에 다운로드 끊기는 문제 수정.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ server.ssl.key-store=classpath:keystore.p12
 server.ssl.key-store-password=wjdqhqhdks
 server.ssl.key-store-type=PKCS12
 server.ssl.key-alias=your_alias
+spring.mvc.async.request-timeout=600000
+server.http2.enabled=true
