--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,4 @@ server.ssl.key-store-type=PKCS12
 server.ssl.key-alias=your_alias
 spring.mvc.async.request-timeout=600000
 server.http2.enabled=true
+logging.config=classpath:log4j2.xml
