--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,22 @@ server.ssl.key-alias=your_alias
 spring.mvc.async.request-timeout=600000
 server.http2.enabled=true
 logging.config=classpath:log4j2.xml
+
+#spring.application.name=ict-cloud-spring
+#server.port=443
+#spring.mvc.view.prefix=/WEB-INF/
+#spring.mvc.view.suffix=.jsp
+#spring.datasource.url=${SPRING_DATASOURCE_URL}
+#spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+#spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.web.resources.cache.period=0
+#spring.servlet.multipart.max-file-size=30000MB
+#spring.servlet.multipart.max-request-size=30000MB
+#server.ssl.key-store=${SERVER_SSL_KEY_STORE}
+#server.ssl.key-store-password=${SERVER_SSL_KEY_STORE_PASSWORD}
+#server.ssl.key-store-type=${SERVER_SSL_KEY_STORE_TYPE}
+#server.ssl.key-alias=${SERVER_SSL_KEY_ALIAS}
+#spring.mvc.async.request-timeout=600000
+#server.http2.enabled=true
+#logging.config=classpath:log4j2.xml
