--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,17 @@ server.ssl.key-store-password=wjdqhqhdks
 server.ssl.key-store-type=PKCS12
 server.ssl.key-alias=your_alias
 spring.mvc.async.request-timeout=600000
-server.http2.enabled=true
+#server.http2.enabled=true
+server.http2.enabled=false
 logging.config=classpath:log4j2.xml
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
+server.tomcat.uri-encoding=UTF-8
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
+
 
 #spring.application.name=ict-cloud-spring
 #server.port=443
