--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,8 @@ server.tomcat.uri-encoding=UTF-8
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 spring.http.encoding.force=true
-
+#spring.mvc.throw-exception-if-no-handler-found=true
+#spring.web.resources.add-mappings=false
 
 #spring.application.name=ict-cloud-spring
 #server.port=443
